# MGL

./: .gitmodules  CMakeLists.txt  README.md
MGL/: MGL.sln  MGL.vcxproj  MGL.vcxproj.filters  fragShader.txt  vertShader.txt
src/: CMakeLists.txt  ContextManager.cpp  ContextManager.h  GameObject.h  GraphicsObject.cpp  GraphicsObject.h  Logger.h  MGLContextManager.cpp  MGLContextManager.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  ShaderType.cpp  Types.h  Window.cpp  Window.h  main.cpp
src/buffers/: ColourBuffer.cpp  ColourBuffer.h  MGLVaoBuffer.cpp  MGLVaoBuffer.h  MGLVboBuffer.cpp  MGLVboBuffer.h  MGLVertexBuffer.cpp  MGLVertexBuffer.h  VaoBuffer.cpp  VaoBuffer.h  VaoBuffer.hpp  Vb0BufferVec2.cpp  VboBuffer.cpp  VboBuffer.h  VboBuffer.hpp  VboBufferVec2.h  VboBufferVec2.hpp  VboBufferVec3.cpp  VboBufferVec3.h  VboBufferVec3.hpp  VboBufferVec4.cpp  VboBufferVec4.h  VboBufferVec4.hpp  VertexBuffer.cpp  VertexBuffer.h
src/engine/: GraphicsObject.cpp  GraphicsObject.hpp  Scene.cpp  Scene.hpp  Types.h  Types.hpp
src/examples/: CMakeLists.txt  fragShader.txt  main.cpp
src/input/: Input.cpp  Input.h
src/mesh/: Mesh.cpp  Mesh.h  Mesh.hpp
src/shaders/: MGLShader.cpp  MGLShader.h  MGLShaderProgram.cpp  MGLShaderProgram.h  Shader.cpp  Shader.h  Shader.hpp  ShaderProgram.cpp  ShaderProgram.h  ShaderProgram.hpp  ShaderType.cpp  ShaderType.h
src/system/: FileSystem.cpp  FileSystem.h  Logger.h  Logger.hpp  Renderer.cpp  Renderer.h  Renderer.hpp  Window.cpp  Window.hpp
