CMAKE_MINIMUM_REQUIRED( VERSION 3.11 )
PROJECT( MGL_ALL )

SET (CMAKE_CXX_FLAGS                "-std=c++17 -Wall -Werror")
SET (CMAKE_CXX_FLAGS_DEBUG          "-g -DMGL_DEBUG")
SET (CMAKE_CXX_FLAGS_RELEASE        "-O4")

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

ADD_SUBDIRECTORY( src )


