CMAKE_MINIMUM_REQUIRED( VERSION 3.11 )
PROJECT( MGL )

# Find GLEW
FIND_PACKAGE( GLEW REQUIRED )

# find GLFW3
FIND_PACKAGE( PkgConfig )
pkg_check_modules( GLFW3 REQUIRED glfw3 )


SET( MGL_SUBDIRECTORIES buffers engine input mesh shaders system )

FOREACH( DIR ${MGL_SUBDIRECTORIES} )
    FILE( GLOB CPP_FILES ${DIR}/*.cpp )
    FILE( GLOB HPP_FILES ${DIR}/*.hpp )
    LIST( APPEND MGL_SOURCE_CPP ${CPP_FILES} )
    LIST( APPEND MGL_SOURCE_HPP ${HPP_FILES} )
ENDFOREACH( DIR )

ADD_LIBRARY( MGL SHARED ${MGL_SOURCE_CPP} )
TARGET_INCLUDE_DIRECTORIES( MGL PUBLIC ${MGL_SUBDIRECTORIES} )
TARGET_LINK_LIBRARIES( MGL GLEW ${GLFW3_LIBRARIES} )

ADD_SUBDIRECTORY( examples )


